Fixed display of related content on mobile.

--- a/source/stylesheets/blog/global.css.sass
+++ b/source/stylesheets/blog/global.css.sass
@@ -292,21 +292,13 @@ article
 				font-size: 0.85em
 				margin-bottom: $leading / 2
 				margin-left: $leading / -2
-			ul
-				width: 70%
-				
+			ul	
 				margin: 0
 				list-style: none
 				+clearfix
-				
 				li
-					float: left
-					width: 28.5%
-					margin-right: 4.5%
-					font-size: 0.85em
-					line-height: 1
-					&:list-child
-						margin-right: 0
+					margin-top: $leading / 2
+					display: block
 					
 		#social
 			&:before
