--- a/source/stylesheets/blog/layout.css.sass
+++ b/source/stylesheets/blog/layout.css.sass
@@ -122,3 +122,16 @@ nav
 			article
 				p
 					text-align: left
+				footer
+					#related
+						ul
+							width: 70%
+							li
+								float: left
+								width: 28.5%
+								margin-top: 0
+								margin-right: 4.5%
+								font-size: 0.85em
+								line-height: 1
+								&:list-child
+									margin-right: 0
